force-app/main/default/objects/Fraud_Validation_Statistics__c/Fraud_Validation_Statistics__c.object-meta.xml
<CustomObject>
    <label>Fraud Validation Statistics</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Fraud Validation Statistics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fraud Validation Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>