force-app/main/default/objects/Fraud_Validation_Statistics__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fraud Validation Statistics</relationshipLabel>
    <relationshipName>Fraud_Validation_Statistics</relationshipName>
    <type>Lookup</type>
</CustomField>