force-app/main/default/objects/Fraud_Validation_Statistics__c/fields/Fraud_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Validation_Rules__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fraud Validation Rules</label>
    <referenceTo>Fraud_Validation_Rules__c</referenceTo>
    <relationshipLabel>Fraud Validation Statistics</relationshipLabel>
    <relationshipName>Fraud_Validation_Statistics</relationshipName>
    <type>Lookup</type>
</CustomField>