force-app/main/default/objects/Fraud_Validation_Statistics__c/fields/IP_Fraud_Flag__c.field-meta.xml
<CustomField>
    <fullName>IP_Fraud_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IP Fraud Flag</label>
    <type>Checkbox</type>
</CustomField>