force-app/main/default/objects/Fraud_Validation_Statistics__c/fields/Number_Of_Times__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Times__c</fullName>
    <label>Number Of Times</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>