force-app/main/default/objects/Fraud_Validation_Statistics__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Fraud Validation Statistics</relationshipLabel>
    <relationshipName>Fraud_Validation_Statistics</relationshipName>
    <type>Lookup</type>
</CustomField>