force-app/main/default/objects/Fraud_Validation_Statistics__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Fraud Validation Statistics</relationshipLabel>
    <relationshipName>Fraud_Validation_Statistics</relationshipName>
    <type>Lookup</type>
</CustomField>