force-app/main/default/objects/Fraud_Validation_Statistics__c/fields/Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Validation_Rule__c</fullName>
    <label>Validation Rule</label>
    <length>200</length>
    <type>Text</type>
</CustomField>